--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -54,8 +54,8 @@ jobs:
           # docker 이미지 가져오기
           docker pull ${{ secrets.DOCKER_IMAGE_NAME }}
 
-          # 현재 존재하는 모든 컨테이너 정지
-          docker stop $(docker ps -a -q) 
+          # 현재 프로젝트에 해당하는 기존 컨테이너 종료
+          docker stop $(docker ps -q --filter "ancestor=${{ secrets.DOCKER_IMAGE_NAME }}")
 
           # 새로운 컨테이너를 백그라운드에서 실행
           docker run -d --log-driver=syslog -p 80:80 ${{ secrets.DOCKER_IMAGE_NAME }}
